@@ -1,18 +1,16 @@
 package com.hjdmmm.blog.service.impl;
 
 import com.hjdmmm.blog.config.CommentConfig;
-import com.hjdmmm.blog.dao.ArticleDAO;
+import com.hjdmmm.blog.constant.CommentConstants;
 import com.hjdmmm.blog.dao.CommentDAO;
 import com.hjdmmm.blog.dao.UserDAO;
-import com.hjdmmm.blog.domain.entity.Article;
+import com.hjdmmm.blog.domain.dto.UserDTO;
 import com.hjdmmm.blog.domain.entity.Comment;
-import com.hjdmmm.blog.domain.entity.User;
+import com.hjdmmm.blog.domain.model.AddCommentModel;
 import com.hjdmmm.blog.domain.vo.BlogCommentVO;
 import com.hjdmmm.blog.domain.vo.PageVO;
-import com.hjdmmm.blog.exception.IllegalArticleCommentException;
 import com.hjdmmm.blog.service.CommentService;
-import com.hjdmmm.blog.util.BeanUtils;
-import com.hjdmmm.blog.util.BooleanUtils;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.Duration;
@@ -22,13 +20,12 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.stream.Collectors;
 
+@AllArgsConstructor
 @Service
 public class CommentServiceImpl implements CommentService {
     private final ConcurrentMap<String, Integer> ip2CommentCountMap = new ConcurrentHashMap<>();
 
     private final ConcurrentMap<String, Instant> ip2CommentInstantMap = new ConcurrentHashMap<>();
-
-    private final ArticleDAO articleDAO;
 
     private final CommentConfig commentConfig;
 
@@ -36,83 +33,96 @@ public class CommentServiceImpl implements CommentService {
 
     private final UserDAO userDAO;
 
-    public CommentServiceImpl(ArticleDAO articleDAO, CommentConfig commentConfig, CommentDAO commentDAO, UserDAO userDAO) {
-        this.articleDAO = articleDAO;
-        this.commentConfig = commentConfig;
-        this.commentDAO = commentDAO;
-        this.userDAO = userDAO;
-    }
-
-    private static String getNickName(User user) {
+    private static String getNickName(UserDTO user) {
         if (user == null) {
             return "匿名用户";
         }
 
-        return user.getNickName();
+        return user.username();
     }
 
-    private static BlogCommentVO buildCommentVO(Comment comment, List<Comment> childrenComments, List<User> users) {
-        BlogCommentVO blogCommentVO = BeanUtils.copyBean(comment, BlogCommentVO.class);
+    private static BlogCommentVO buildCommentVO(Comment comment, List<Comment> childrenComments, List<UserDTO> users) {
+        UserDTO user = users.stream()
+            .filter(e -> e.id() == comment.getCreateBy())
+            .findFirst()
+            .orElse(null);
 
-        User user = users.stream()
-                .filter(e -> e.getId().equals(comment.getCreateBy()))
+        Long pid = null;
+        Long toCommentUserId = null;
+        String toCommentUsername = null;
+        if (CommentConstants.ROOT_COMMENT_PID != comment.getPid()) {
+            UserDTO toCommentUser = users.stream()
+                .filter(e -> e.id() == comment.getCreateBy())
                 .findFirst()
                 .orElse(null);
-        blogCommentVO.setNickName(getNickName(user));
 
-        if (!Long.valueOf(Comment.ROOT_PID).equals(blogCommentVO.getPid())) {
-            User toCommentUser = users.stream()
-                    .filter(e -> e.getId().equals(comment.getToCommentUserId()))
-                    .findFirst()
-                    .orElse(null);
-            blogCommentVO.setToCommentUserNickName(getNickName(toCommentUser));
+            pid = comment.getPid();
+            toCommentUserId = comment.getToCommentUserId();
+            toCommentUsername = getNickName(toCommentUser);
         }
 
-        if (childrenComments == null) {
-            return blogCommentVO;
-        }
-
-        List<BlogCommentVO> children = childrenComments.stream()
+        List<BlogCommentVO> children = null;
+        if (childrenComments != null) {
+            children = childrenComments.stream()
                 .filter(e -> comment.getId().equals(e.getPid()))
                 .map(e -> buildCommentVO(e, null, users))
-                .collect(Collectors.toList());
-        blogCommentVO.setChildren(children);
+                .toList();
+        }
 
-        return blogCommentVO;
+        return BlogCommentVO.builder()
+            .id(comment.getId())
+            .articleId(comment.getArticleId())
+            .pid(pid)
+            .content(comment.getContent())
+            .toCommentUserId(toCommentUserId)
+            .toCommentUsername(toCommentUsername)
+            .toCommentId(comment.getToCommentId())
+            .createTime(comment.getCreateTime())
+            .username(getNickName(user))
+            .children(children)
+            .build();
     }
 
     @Override
-    public void add(Comment comment) throws IllegalArticleCommentException {
-        if (Integer.valueOf(Comment.ARTICLE_COMMENT).equals(comment.getType())) {
-            boolean articleCanComment = Optional.of(comment)
-                    .map(Comment::getArticleId)
-                    .map(articleDAO::select)
-                    .map(Article::getComment)
-                    .map(BooleanUtils::toBoolean)
-                    .orElse(false);
+    public void add(AddCommentModel model, long modifier) throws Exception {
+        long pid = CommentConstants.ROOT_COMMENT_PID;
+        long toCommentId = CommentConstants.ROOT_COMMENT_PID;
+        if (model.pid() != null) {
+            pid = model.pid();
 
-            if (!articleCanComment) {
-                throw new IllegalArticleCommentException();
+            Comment parentComment = commentDAO.select(pid);
+            if (parentComment.getPid() == CommentConstants.ROOT_COMMENT_PID) {
+                toCommentId = parentComment.getId();
+            } else {
+                toCommentId = parentComment.getToCommentId();
             }
         }
+
+        Comment comment = new Comment();
+        comment.setArticleId(model.articleId());
+        comment.setPid(pid);
+        comment.setContent(model.content());
+        comment.setToCommentId(toCommentId);
+        comment.setCreateBy(modifier);
+        comment.setUpdateBy(modifier);
 
         commentDAO.insert(comment);
     }
 
     @Override
-    public PageVO<BlogCommentVO> getArticleComments(int pageNum, int pageSize, long articleId) {
+    public PageVO<BlogCommentVO> getArticleComments(int pageNum, int pageSize, long articleId) throws Exception {
         PageVO<Comment> commentPageVO = commentDAO.pageSelectRootByArticleId(pageNum, pageSize, articleId);
 
-        List<Comment> commentList = commentPageVO.getRows();
+        List<Comment> commentList = commentPageVO.rows();
 
         List<Comment> childrenComments;
         if (commentList.isEmpty()) {
             childrenComments = Collections.emptyList();
         } else {
-            childrenComments = commentDAO.selectByPids(commentList.stream().map(Comment::getId).collect(Collectors.toList()));
+            childrenComments = commentDAO.selectByPids(commentList.stream().map(Comment::getId).toList());
         }
 
-        List<User> users;
+        List<UserDTO> users;
         if (commentList.isEmpty()) {
             users = Collections.emptyList();
         } else {
@@ -122,15 +132,15 @@ public class CommentServiceImpl implements CommentService {
             Set<Long> userIdSet = allComments.stream().map(Comment::getCreateBy).collect(Collectors.toSet());
 
             userIdSet.addAll(childrenComments.stream()
-                    .map(Comment::getToCommentUserId)
-                    .collect(Collectors.toSet()));
+                .map(Comment::getToCommentUserId)
+                .collect(Collectors.toSet()));
 
-            users = userDAO.select(userIdSet);
+            users = userDAO.selectAll(new ArrayList<>(userIdSet));
         }
 
-        List<BlogCommentVO> blogCommentVOList = commentList.stream().map(comment -> buildCommentVO(comment, childrenComments, users)).collect(Collectors.toList());
+        List<BlogCommentVO> blogCommentVOList = commentList.stream().map(comment -> buildCommentVO(comment, childrenComments, users)).toList();
 
-        return commentPageVO.convertType(blogCommentVOList);
+        return PageVO.<BlogCommentVO>builder().rows(blogCommentVOList).total(commentPageVO.total()).build();
     }
 
     @Override
@@ -158,9 +168,9 @@ public class CommentServiceImpl implements CommentService {
     private void deleteExpiredIps() {
         Instant now = Instant.now();
         List<String> list = ip2CommentInstantMap.entrySet().stream()
-                .filter(entry -> Duration.between(entry.getValue(), now).compareTo(commentConfig.getExpireSeconds()) > 0)
-                .map(Map.Entry::getKey)
-                .toList();
+            .filter(entry -> Duration.between(entry.getValue(), now).compareTo(commentConfig.getExpireSeconds()) > 0)
+            .map(Map.Entry::getKey)
+            .toList();
         for (String key : list) {
             ip2CommentCountMap.remove(key);
             ip2CommentInstantMap.remove(key);
